--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -6,7 +6,7 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') to-travel
+      a.navbar-brand(href='/') ToTravel
 
     div#navbar-main.navbar-collapse.collapse(collapse='isCollapsed')
       ul.nav.navbar-nav
