--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -2,14 +2,13 @@ div(ng-include='"components/navbar/navbar.html"')
 
 header#banner.hero-unit
   .container
-    h1 'Allo, 'Allo!
-    p.lead Kick-start your next web app with Angular Fullstack
-    img(src='assets/images/yeoman.png', alt='I\'m Yeoman')
+    h1 ToTravel
+    p.lead Where it's better to travel than to arrive...
 
 .container
   .row
     .col-lg-12
-      h1.page-header Features:
+      h1.page-header Journeys:
       ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='thing in awesomeThings')
         li
           a(href='#', tooltip='{{thing.info}}')
@@ -18,8 +17,6 @@ header#banner.hero-unit
 footer.footer
   .container
     p
-      | Angular Fullstack v2.0.13
+      | ToTravel
       = ' | '
-      a(href='https://twitter.com/tyhenkel') @tyhenkel
-      = ' | '
-      a(href='https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open') Issues
+      | &copy; Alex Anthony 2015
