--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -11,7 +11,9 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
     div#navbar-main.navbar-collapse.collapse(collapse='isCollapsed')
       ul.nav.navbar-nav
         li(ng-repeat='item in menu', ng-class='{active: isActive(item.link)}')
-          a(ng-href='{{item.link}}') {{item.title}}
+          a(ng-href='{{item.link}}') 
+            span(ng-show='{{item.showIcon}}', ng-class='item.icon').glyphicon
+            | {{item.title}}
 
         li(ng-show='isAdmin()', ng-class='{active: isActive("/admin")}')
           a(href='/admin') Admin
