--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -9,10 +9,10 @@ header#banner.hero-unit
   .row
     .col-lg-12
       h1.page-header Journeys:
-      //- ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='thing in awesomeThings')
-      //-   li
-      //-     a(href='#', tooltip='{{thing.info}}')
-      //-       | {{thing.name}}
+      ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='journey in journeyList')
+        li
+          a(href='#', tooltip='{{journey.description}}')
+            | {{journey.name}}
 
 footer.footer
   .container
