--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -1,10 +1,10 @@
 div(ng-include='"components/navbar/navbar.html"')
 .container
   .row
-    .col-sm-12
+    .col-lg-4.col-lg-offset-4
       h1 Login
 
-    .col-sm-12
+    .col-lg-offset-4.col-lg-4
       form.form(name='form', ng-submit='login(form)', novalidate='')
         .form-group
           label Email
@@ -14,29 +14,29 @@ div(ng-include='"components/navbar/navbar.html"')
           input.form-control(type='password', name='password', ng-model='user.password')
 
         .form-group.has-error
-          p.help-block(ng-show='form.email.$error.required && form.password.$error.required && submitted')
-            | Please enter your email and password.
-          p.help-block {{ errors.other }}
+            p.help-block(ng-show='form.email.$error.required && form.password.$error.required && submitted')
+              | Please enter your email and password.
+            p.help-block {{ errors.other }}
 
-        div
+        .form-group
           button.btn.btn-inverse.btn-lg.btn-login(type='submit')
             | Login
           = ' '
           a.btn.btn-default.btn-lg.btn-register(href='/signup')
             | Register
 
-        hr
+        hr.form-group
 
-        div
+        .form-group
           a.btn.btn-facebook(href='', ng-click='loginOauth("facebook")')
             i.fa.fa-facebook
-            |  Connect with Facebook
+            |  Facebook
           = ' '
           a.btn.btn-google-plus(href='', ng-click='loginOauth("google")')
             i.fa.fa-google-plus
-            |  Connect with Google+
+            |  Google
           = ' '
           a.btn.btn-twitter(href='', ng-click='loginOauth("twitter")')
             i.fa.fa-twitter
-            |  Connect with Twitter
+            |  Twitter
   hr
