--- a/client/app/account/signup/signup.jade
+++ b/client/app/account/signup/signup.jade
@@ -1,9 +1,9 @@
 div(ng-include='"components/navbar/navbar.html"')
 .container
   .row
-    .col-sm-12
+    .col-lg-4.col-lg-offset-4
       h1 Sign up
-    .col-sm-12
+    .col-lg-4.col-lg-offset-4
       form.form(name='form', ng-submit='register(form)', novalidate='')
         .form-group(ng-class='{ "has-success": form.name.$valid && submitted,\
         "has-error": form.name.$invalid && submitted }')
@@ -45,13 +45,13 @@ div(ng-include='"components/navbar/navbar.html"')
         div
           a.btn.btn-facebook(href='', ng-click='loginOauth("facebook")')
             i.fa.fa-facebook
-            |  Connect with Facebook
+            |  Facebook
           = ' '
           a.btn.btn-google-plus(href='', ng-click='loginOauth("google")')
             i.fa.fa-google-plus
-            |  Connect with Google+
+            |  Google+
           = ' '
           a.btn.btn-twitter(href='', ng-click='loginOauth("twitter")')
             i.fa.fa-twitter
-            |  Connect with Twitter
+            |  Twitter
   hr
