--- a/client/app/addJourney/addJourney.jade
+++ b/client/app/addJourney/addJourney.jade
@@ -4,7 +4,7 @@ div(ng-include='"components/navbar/navbar.html"')
   form#journeyForm
     .row.form-group
       .col-lg-4
-        input.form-control.input-lg.col-lg-4(type='text', placeholder='Name that journey!', ng-model='newJourney.name')
+        input.form-control.input-lg(type='text', placeholder='Name that journey!', ng-model='newJourney.name')
     .row.form-group
       .col-lg-8
         input.form-control(type='text', placeholder='Describe the journey', ng-model='newJourney.description')
