--- a/client/app/account/signup/signup.jade
+++ b/client/app/account/signup/signup.jade
@@ -32,6 +32,13 @@ div(ng-include='"components/navbar/navbar.html"')
           p.help-block(ng-show='form.password.$error.mongoose')
             | {{ errors.password }}
 
+        .form-group(ng-class='{ "has-success": form.passwordRetype.$valid && submitted,\
+        "has-error": form.passwordRetype.$invalid && submitted }')
+          label Retype Password
+          input.form-control(type='password', name='passwordRetype', ng-model='user.passwordRetype', compare-to='user.password')
+          p.help-block(ng-show='(user.password !== user.passwordRetype) && submitted')
+            | Passwords do not match.
+
         div
           button.btn.btn-inverse.btn-lg.btn-login(type='submit')
             | Sign up
@@ -49,7 +56,7 @@ div(ng-include='"components/navbar/navbar.html"')
           = ' '
           a.btn.btn-google-plus(href='', ng-click='loginOauth("google")')
             i.fa.fa-google-plus
-            |  Google+
+            |  Google
           = ' '
           a.btn.btn-twitter(href='', ng-click='loginOauth("twitter")')
             i.fa.fa-twitter
