--- a/client/app/addJourney/addJourney.jade
+++ b/client/app/addJourney/addJourney.jade
@@ -21,9 +21,12 @@ div(ng-include='"components/navbar/navbar.html"')
     div(ng-repeat="transportationAndRating in newJourney.transportationAndRatings").row.form-group
       .transportationMethod.col-lg-2
         ui-select(ng-model='transportationAndRating.method', search-enabled='false', append-to-body='true')
-          ui-select-match(placeholder='Select Transport...') {{$select.selected.name}}
+          ui-select-match(placeholder='Select Transport...') 
+            i(ng-show='$select.selected.hasFAIcon', ng-class='$select.selected.icon').fa.fa-fw.fa-rightpad
+            | {{$select.selected.name}}
           ui-select-choices(repeat='transportationMethod.id as transportationMethod in methods | availableMethodsFilter:newJourney.transportationAndRatings:$select.selected.id')
-            p {{transportationMethod.name }}
+            i(ng-show='{{transportationMethod.hasFAIcon}}', ng-class='transportationMethod.icon').fa.fa-fw.fa-rightpad
+            | {{transportationMethod.name }}
       .transportationRating.col-lg-2
         rating(ng-model='transportationAndRating.rating').input-lg
       div(ng-show='canDeleteTransportationMethod()', style='padding-top: 5px;')
