Add (ugly) credit screen. Add footer to all pages.

--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -40,3 +40,5 @@ div(ng-include='"components/navbar/navbar.html"')
             i.fa.fa-twitter
             |  Twitter
   hr
+
+div(ng-include='"components/footer/footer.html"')
