--- a/client/app/addJourney/addJourney.jade
+++ b/client/app/addJourney/addJourney.jade
@@ -38,3 +38,5 @@ div(ng-include='"components/navbar/navbar.html"')
 
     .row.form-group
       button.btn.btn-primary.btn-lg(type='submit', ng-click='createJourney()') Create Journey
+
+div(ng-include='"components/footer/footer.html"')
