--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -25,7 +25,9 @@ $colHighlight   : #ecdbff;
 @import 'account/login/login.scss';
 @import 'addJourney/addJourney.scss';
 @import 'admin/admin.scss';
+@import 'credits/credits.scss';
 @import 'main/main.scss';
+@import 'footer/footer.scss';
 @import 'modal/modal.scss';
 @import 'navbar/navbar.scss';
 // endinjector
