--- a/client/app/account/settings/settings.jade
+++ b/client/app/account/settings/settings.jade
@@ -19,3 +19,5 @@ div(ng-include='"components/navbar/navbar.html"')
         p.help-block  {{ message }}
 
         button.btn.btn-lg.btn-primary(type='submit') Save changes
+
+div(ng-include='"components/footer/footer.html"')
