--- a/client/app/account/signup/signup.jade
+++ b/client/app/account/signup/signup.jade
@@ -62,3 +62,5 @@ div(ng-include='"components/navbar/navbar.html"')
             i.fa.fa-twitter
             |  Twitter
   hr
+
+div(ng-include='"components/footer/footer.html"')
