Add alerts for addJourney success/failure
Eventually, success = redirect to view page

--- a/client/app/addJourney/addJourney.jade
+++ b/client/app/addJourney/addJourney.jade
@@ -1,6 +1,10 @@
 div(ng-include='"components/navbar/navbar.html"')
 
 .container
+  alert(ng-repeat='alert in alerts', type='{{alert.type}}', close='closeAlert($index)')
+    | {{alert.message1}} 
+    b {{alert.messageBold}} 
+    | {{alert.message2}} 
   form#journeyForm
     .row.form-group
       .col-lg-4
