--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -11,7 +11,7 @@ header#banner.hero-unit
       h1.page-header Journeys:
       ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='journey in journeyList')
         li
-          a(href='#', tooltip='{{journey.description}}')
+          a(ui-sref='journey({journeyID: journey._id})', tooltip='{{journey.description}}')
             | {{journey.name}}
 
 div(ng-include='"components/footer/footer.html"')
