--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -1,7 +1,10 @@
-$icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/bootstrap/";
+$icon-font-path: "/bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
 $fa-font-path: "/bower_components/font-awesome/fonts";
 
-@import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
+@import "bootswatch-scss/flatly/variables";
+@import "bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
+@import "bootstrap-sass-official/assets/stylesheets/bootstrap";
+@import "bootswatch-scss/flatly/bootswatch";
 @import 'font-awesome/scss/font-awesome';
 
 /**
@@ -13,6 +16,10 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
+}
+
+body {
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 
